[package]
name = "spectrogram-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.30"
yew = { version = "0.20.0", features = ["csr"] }
anyhow = "1.0"
wgpu = { version = "0.14", features = ["webgl"]}
pollster = "0.2"
winit = "0.27"
bytemuck = { version = "1.4", features = [ "derive" ] }
cfg-if = "1"
js-sys = "0.3"
gloo="0.8"
serde="1.0"
serde_json="1.0"
env_logger = "0.9"
log = "0.4"
cgmath = "0.18"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AnalyserNode',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'MediaStreamAudioSourceNode',
  'MediaStream',
  'MediaStreamAudioSourceOptions',
  'OscillatorNode',
  'OscillatorType',
  'console',
  'Document',
  'Window',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
